--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/payment": "^2.1.3",
     "@types/react": "^17.0.0",
+    "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.12.1",
+    "@types/styled-components": "^5.1.13",
+    "final-form": "^4.20.2",
+    "payment": "^2.4.6",
     "react": "^17.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.3",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
