--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-modal": "^3.12.1",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.13",
     "final-form": "^4.20.2",
     "payment": "^2.4.6",
@@ -21,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
     "react-modal": "^3.14.3",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
